# h_rcm_vs_ws

./: .gitignore  .gitmodules  README.md
src/rcm_eval/: CMakeLists.txt  package.xml
src/rcm_eval/data/: h_rcm_vs_feedback.pkl  mean_pairwise_distance.pkl  twist.pkl
src/rcm_eval/data/h_gen_endoscopy_stored_views/: h_rcm_vs_feedback.pkl  pairwise_distance.pkl  path_0.pkl  rcm_state.pkl  twist.pkl
src/rcm_eval/data/h_gen_endoscopy_stored_views/exports/: h_rcm_vs_feedback.csv  pairwise_distance.csv  path_0.csv  rcm_state.csv  twist.csv
src/rcm_eval/launch/: rcm_deviation.launch  rcm_eval.launch
src/rcm_eval/notebooks/: img_eval.ipynb  rcm_eval.ipynb
src/rcm_eval/python/: dataframe_exporter.py  rcm_deviation_node.py  rcm_eval_node.py
src/rcom_eval/: CMakeLists.txt  package.xml
src/rcom_eval/data/: rcom_state.pkl
src/rcom_eval/launch/: rcom_deviation.launch  rcom_eval.launch
src/rcom_eval/notebooks/: rcom_eval.ipynb
src/rcom_eval/python/: rcom_deviation_node.py  rcom_eval_node.py
